<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerRegistros"
    android:orientation="vertical">
    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewNombre"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />
    <TextView
        android:id="@+id/viewTelefonoew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_Telefono" />

    <EditText
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewTelefono"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewCorreo_electronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_correo"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/txtCorreo_electronico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewCorreo_electronico"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/viewPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_pedido"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/txtPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewPedido"
        android:textSize="24sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#C9C60CC4"
        android:hint="@string/btn_guardar" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="240dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:background="#C9C60CC4"
        android:backgroundTint="#C9C60CC4"
        android:clickable="true"
        android:src="@drawable/ic_edit"
        tools:ignore="SpeakableTextPresentCheck" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="33dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEliminar"
        android:layout_width="83dp"
        android:layout_height="92dp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="#C9C60CC4"
        android:clickable="true"
        tools:srcCompat="@drawable/ic_fab_eliminar" />


</LinearLayout>